--- a/src/components/SidebarRow.css
+++ b/src/components/SidebarRow.css
@@ -28,3 +28,11 @@
 .sidebarRow:hover > .sidebarRow__title {
   font-weight: bold;
 }
+
+.sidebarRow.selected {
+  background-color: lightgrey;
+}
+
+.sidebarRow.selected > .sidebarRow__icon {
+  color: red;
+}
