--- a/src/components/RecommendedVideo.css
+++ b/src/components/RecommendedVideo.css
@@ -1,15 +1,15 @@
-.recomendedVideos {
+.RecommendedVideos {
   flex: 0.8;
   background-color: #f9f9f9;
   padding: 40px 20px;
   padding-bottom: 0;
 }
 
-.recomendedVideos > h2 {
+.RecommendedVideos > h2 {
   margin-left: 5px;
   margin-bottom: 20px;
 }
-.recomendedVideos__videos {
+.RecommendedVideos__videos {
   display: flex;
   flex-wrap: wrap;
 }
